# datascience

superstore/: .gitignore  README.md  pyproject.toml  requirements.txt  superstore_ds_project.zip:Zone.Identifier
superstore/app/: streamlit_app.py
superstore/models/: model.py
superstore/notebooks/: 01_eda.py
superstore/reports/: metrics.json
superstore/src/: features.py  train_model.py
